log/old logs/Mar06_55062_roberta_hyperparameter_search.err
  File "run_hyperparameter_search.py", line 92
    mode='min',
       ^
SyntaxError: invalid syntax
